# HiVQ

./: LICENSE  README.md
browser/: release.py
browser/static/lib/css/: mapDesign.css
browser/templates/: HiVQ.html
dep_packeges/Hicore/hicore/: binary.hpp  core.hpp  core_creator.hpp  geo.hpp  index.hpp  mem_impl.hpp  shp.hpp
dep_packeges/Hicore/hicore/adapter/: mpi_adapter.hpp
server/: CMakeLists.txt  runServer.sh  stop.sh
server/data/China_mainland_poi/: China_mainland_poi.shx
server/data/China_mainland_railway/: China_mainland_railway.shx
server/data/China_mainland_traffic/: China_mainland_traffic.shx
server/include/: buildIndex.hpp  intersectJudge.hpp  linestringPlot.hpp  pointPlot.hpp  polygonPlot.hpp  treeNode.hpp
server/include/hicore/: benchmark.hpp  core_iterator.hpp  mem.hpp  pg.hpp  util.hpp  wkb.hpp
server/include/hicore/adapter/: sidx_adapter.hpp
server/src/: buildIndex.cpp  intersectJudge.cpp  linestringPlot.cpp  pointPlot.cpp  polygonPlot.cpp  treeNode.cpp  visualServer.cpp
